--- a/mitwelten_explore/public/index.html
+++ b/mitwelten_explore/public/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Explore the Biodiversity in and around Basel">
+    <meta name="author" content="Mitwelten, Timeo Wullschleger">
+    <meta property="og:image" content="https://explore.mitwelten.org/public/images/taxond.png" />
     <title>Mitwelten Explore</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -39,7 +42,7 @@
                     <h3 class="display-6">Explore the Biodiversity in and around <small class="hltext">Basel</small>
                     </h3>
                     <br>
-                    <p class="lead"><a href="/app">Sign in</a> or <a href="/app">Register</a> to Analyze Our Discoveries
+                    <p class="lead"><a href="/app">Sign in</a> or <a href="/app">Register</a> to Analyze Our Findings
                     </p>
                 </div>
             </div>
