--- a/mitwelten_explore/public/index.html
+++ b/mitwelten_explore/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Explore the Biodiversity in and around Basel">
+    <meta name="description" content="Mitwelten Explore is an application for exploring biodiversity in and around Basel. Analyze the spatial and temporal activity of more than 200 detected species.">
     <meta name="author" content="Mitwelten, Timeo Wullschleger">
     <meta property="og:image" content="https://explore.mitwelten.org/public/images/taxond.png" />
     <title>Mitwelten Explore</title>
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="public/style.css">
     <meta name="google-site-verification" content="jBN-UMiRnpnLw0yKK1tgphwhzzCMEdqWxhbp_1P_Ouc" />
 </head>
+
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
@@ -22,7 +23,7 @@
 
             <div class="hstack gap-3">
                 <div class="hstack gap-1 mt-1">
-                    <img src="public/images/mitwelten_logo.png">
+                    <img src="public/images/mitwelten_logo.png" alt="mitwelten logo">
                     <div id="navbartext">MITWELTEN EXPLORE</div>
                 </div>
                 <div class=" ms-auto mt-1">
@@ -65,43 +66,43 @@
                         </div>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src="public/images/taxond.png" class="d-block w-100" alt="...">
+                                <img src="public/images/taxond.png" class="d-block w-100" alt="Taxon Dashboard: Explore the spatial and temporal activity of more than 200 detected species">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Explore Species 🦅</h5>
                                     <p>Explore the spatial and temporal activity of more than 200 detected species</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="public/images/deploymentd.png" class="d-block w-100" alt="...">
+                                <img src="public/images/deploymentd.png" class="d-block w-100" alt="Habitat Dashboard: Discover the ontodiversity in specific places">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Habitat-specific biodiversity 🌲</h5>
                                     <p>Discover the ontodiversity in specific places</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="public/images/compd.png" class="d-block w-100" alt="...">
+                                <img src="public/images/compd.png" class="d-block w-100" alt="Comparison Dashboard: Learn how environmental factors influence biodiversity. Find correlations and connections among multiple datasets">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Compare different datasets 🔬</h5>
                                     <p>Find the factors that influence biodiversity</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="public/images/mapd.png" class="d-block w-100" alt="...">
+                                <img src="public/images/mapd.png" class="d-block w-100" alt="Map Dashboard: Analyze spatial differences and find out where you could spot certain species">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Spatial activity 🗺</h5>
-                                    <p>Analyze spatial differences and find out where you could sight certain species
+                                    <p>Analyze spatial differences and find out where you could spot certain species
                                     </p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="public/images/tsd.png" class="d-block w-100" alt="...">
+                                <img src="public/images/tsd.png" class="d-block w-100" alt="Timeseries Dashboard: Learn about the seasonal and daily changes in biodiversity.">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Spot trends over time 📅</h5>
                                     <p>Learn about the seasonal and daily changes in biodiversity</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="public/images/annotd.png" class="d-block w-100" alt="...">
+                                <img src="public/images/annotd.png" class="d-block w-100" alt="Share your insights! Create annotations and let other users know what you discovered.">
                                 <div class="carousel-caption d-none d-md-block">
                                     <h5>Share your insights 💡</h5>
                                     <p>Let other users know what you discovered</p>
@@ -122,20 +123,24 @@
                 </div>
             </div>
         </div>
-        <div class="navbar fixed-bottom p-2  border-top">
+        <div class="navbar fixed-bottom p-2  bottombar">
             <div class="col-md-4 d-flex align-items-center">
-                <a href="https://www.fhnw.ch/" target="_blank"><img src="public/images/fhnw-logo.svg"></a>
+                <a href="https://www.fhnw.ch/" target="_blank"><img src="public/images/fhnw-logo.svg" alt="fhnw logo"
+                        height="30px"></a>
             </div>
             <div class="col-md-4 d-flex align-items-center">
-                <a href="https://www.mitwelten.org/" target="_blank">
-                    <b>
-                        SNF Mitwelten
-                    </b>
+                <a href="https://www.mitwelten.org/" target="_blank" style="text-decoration: none;">
+                    <span>
+                        <img src="public/images/mw_favicon.png" height="26px" alt="mitwelten favicon">
+                        <b style="color: black;">SNF Mitwelten</b>
+
+                    </span>
+
                 </a>
             </div>
             <div class="col-md-auto d-flex align-items-center">
                 <a href="https://github.com/mitwelten/mitwelten-explore" target="_blank">
-                    <img src="public/images/github.svg">
+                    <img src="public/images/github.svg" height="30px" alt="github logo">
                 </a>
             </div>
         </div>
